"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2005-11-04	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-65-parser-03-01:
	  Parser related activity.  
	  There has been a request for #include feature, so that will
		be one goal for this branch.
	  In this revision:
		renamed all lexer/parser files art++ -> hackt.
	  Minor fix in an awk script to remove hard-coded name.  


2005-11-03	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-65:
	  No source change, just Makefile adjustment to fix problem where
		test scripts would depend on . being in user's path.  
		Thanks to Arvind Kumar for reporting.  


	* ARTXX-00-01-04-main-00-64-merged-cflat-03-02:
	  Merged major cflat functionality from -cflat-03 branch.  
	  A good time to announce a pre-release.  


2005-11-03	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-63-cflat-03-02:
	  Added a TON of cflat modes, having reverse-engineered most
		cflat formats from the original program.  
	  Added real command-line parsing to the cflat subprogram:
		now able to pass in a preset mode and apply any number
		of individual flag modifiers for customization.  
	  Implemented wire-mode alias printing in footprint::cflat_aliases
		and part of substructure_alias_base<false>::__cflat_aliases, 
		in which all aliases are accumulated in a cache
		and printed in the end in aggregate form: wire (a,b,c...);
		Made use of alias_string_cache, which from previous branch.  
	  Various cflat modes not rigorously tested, and many old CAST
		features (like attrib, spec,...) not yet supported.  
		Will update as we learn more from testing.  
	  Usage for hackt cflat is pretty verbose.  
	  Ready for production, merge to trunk.  
	  TODO: documentation: tutorial on hackt::cflat, after merge.


2005-11-02	David Fang		<fangism@users.sourceforge.net>
