@@ -15,4 +15,5 @@ core.*
 *.hchk
 *.tccchk
 dummy.cc
+cxx_version.h
 
