@@ -14,3 +14,4 @@ ignore
 *.tab.h
 *.ht
 *.cct
+yacc_version.h
